syntax = "proto3";

package pd;

import "user.proto";

option go_package = "github.com/logosmjt/bookstore-go/pb";

message CreateUserRequest {
    string name = 1;
    string password = 2;
    string email = 3;
    string role = 4;
}

message CreateUserResponse {
    User user = 1;
}