syntax = "proto3";

package pd;

import "rpc_create_user.proto";

option go_package = "github.com/logosmjt/bookstore-go/pb";

service BookStore {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
}